<resources>
    <string name="app_name">EnglishLearningApp</string>
    <string name="default_web_client_id">MY_CLIENT_ID</string>
    <string name="title_app_name">English Learning</string>

    <!-- Settings -->
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_description">Enable/disable dark theme</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="notification_description">Receive daily learning notifications</string>
    <string name="notification_time">Notification Time</string>

    <!-- Language -->
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>

    <!-- Dialog -->
    <string name="select_language">Select Language</string>
    <string name="select_notification_time">Select Notification Time</string>
    <string name="select_custom_time">Select Custom Time</string>
    <string name="custom">Custom</string>
    <string name="cancel">Cancel</string>

    <!-- Messages -->
    <string name="notifications_enabled">Notifications enabled</string>
    <string name="notifications_disabled">Notifications disabled</string>
    <string name="notification_time_set">Notification set for %s</string>
    <string name="language_changed_to">Language changed to %s</string>

    <!-- Bottom Navigation -->
    <string name="navigation_home">Home</string>
    <string name="navigation_word">Words</string>
    <string name="navigation_account">Account</string>

    <!-- Header & Navigation -->
    <string name="settings">Settings</string>
    <string name="back">Back</string>

    <!-- Home Fragment -->
    <string name="dictionary_title">English - Vietnamese Dictionary</string>
    <string name="search_hint">Enter word to look up...</string>
    <string name="learning_resources">Learning Resources</string>

    <!-- Menu cards -->
    <string name="grammar">Grammar</string>
    <string name="listening">Listening</string>
    <string name="reading">Reading</string>
    <string name="vocabulary">Vocabulary Sets</string>
    <string name="exercise">Exercises</string>
    <string name="news">News</string>
    <string name="video">Videos</string>
    <string name="game">Games</string>
    <string name="translate">Text Translation</string>
    <string name="chat_learning">Learning Chat</string>
    <string name="book">Books</string>
    <string name="browser">Browser</string>
    <string name="epub">EPUB Reader</string>
    <string name="blog">Blog</string>

    <!-- Dictionary result -->
    <string name="example">Example:</string>
    <string name="no_result_found">No results found</string>


    <!-- Common -->
    <string name="loading">Loading...</string>
    <string name="error">An error occurred</string>
    <string name="retry">Retry</string>
    <string name="ok">OK</string>

    <string name="no_notifications">No notifications</string>
    <string name="no_notifications_description">You don\'t have any notifications yet</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="clear_all">Clear all</string>
    <string name="delete_notification">Delete notification</string>
    <string name="delete_notification_confirmation">Are you sure you want to delete this notification?</string>
    <string name="clear_all_notifications">Clear all notifications</string>
    <string name="clear_all_confirmation">Are you sure you want to delete all notifications?</string>
    <string name="notification_deleted">Notification deleted</string>
    <string name="all_notifications_deleted">All notifications deleted</string>
    <string name="marked_all_as_read">Marked all as read</string>
</resources>